--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^5.5.0
   cupertino_icons: ^1.0.8
+  firebase_auth: ^5.3.3
   firebase_core: ^3.8.0
   firebase_messaging: ^15.1.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
   flutter_local_notifications: ^18.0.1
   get_it: ^8.0.2
 
