--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,11 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  flutter_facebook_auth: ^7.1.1
   flutter_local_notifications: ^18.0.1
+  flutter_svg: ^2.0.15
   get_it: ^8.0.2
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_lints: ^4.0.0
@@ -53,8 +56,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/svgs/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
