--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,12 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_facebook_auth: ^7.1.1
+  flutter_intl_phone_field: ^0.0.4
   flutter_local_notifications: ^18.0.1
   flutter_svg: ^2.0.15
   get_it: ^8.0.2
   google_sign_in: ^6.2.2
+  pinput: ^5.0.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
