--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.4.1
   cloud_firestore: ^5.5.0
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.3.3
@@ -43,6 +44,7 @@ dependencies:
   get_it: ^8.0.2
   google_sign_in: ^6.2.2
   pinput: ^5.0.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_lints: ^4.0.0
