--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,11 @@ dependencies:
   google_sign_in: ^6.2.2
   intl: ^0.20.1
   pinput: ^5.0.0
+  supabase_flutter: ^2.8.1
   uuid: ^4.5.1
 
 dev_dependencies:
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
 
