--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+lib/core/supabase/supabase_config.dart
 
 # Symbolication related
 app.*.symbols
