--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cached_network_image: ^3.4.1
+  cached_video_player_plus: ^3.0.3
   cloud_firestore: ^5.5.0
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.3.3
@@ -43,10 +44,15 @@ dependencies:
   flutter_svg: ^2.0.15
   get_it: ^8.0.2
   google_sign_in: ^6.2.2
+  image_picker: ^1.1.2
   intl: ^0.20.1
+  path_provider: ^2.1.5
   pinput: ^5.0.0
   supabase_flutter: ^2.8.1
   uuid: ^4.5.1
+  video_thumbnail:
+    git:
+      url: https://github.com/ahmedzayan7920/video_thumbnail.git
 
 dev_dependencies:
   flutter_lints: ^5.0.0
