--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ migrate_working_dir/
 .pub/
 /build/
 lib/core/supabase/supabase_config.dart
+.vscode/easycode.ignore
 
 # Symbolication related
 app.*.symbols
