--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,10 @@ dependencies:
   cached_video_player_plus: ^3.0.3
   cloud_firestore: ^5.5.0
   cupertino_icons: ^1.0.8
+  firebase_analytics: ^11.3.6
   firebase_auth: ^5.3.3
   firebase_core: ^3.8.0
+  firebase_crashlytics: ^4.2.0
   firebase_messaging: ^15.1.5
   flutter:
     sdk: flutter
