--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,6 +35,22 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
+
+    flavorDimensions "default"
+
+    productFlavors {
+        dev {
+            dimension "default"
+            resValue "string", "app_name", "Chat Dev"
+            applicationIdSuffix ".dev"
+        }
+
+        prod {
+            dimension "default"
+            resValue "string", "app_name", "Chat Prod"
+            applicationIdSuffix ".prod"
+        }
+    }
 }
 
 flutter {
